# python-docker-lambda

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
